--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -140,15 +140,15 @@
 
 <ion-fab slot="fixed" horizontal="center" vertical="bottom" class="bottom-safe">
   <ion-row>
-    <div class="record-button canvas-color" (click)="fs.gotoPage('tab1')">
+    <div class="record-button" (click)="fs.gotoPage('tab1')">
       <ion-icon name="earth-sharp"></ion-icon>
       <span>{{ 'MAP.MAP_BUTTON' | translate }}</span>
     </div>
-    <div class="record-button canvas-color" (click)="fs.gotoPage('archive')">
+    <div class="record-button" (click)="fs.gotoPage('archive')">
       <ion-icon name="list-sharp"></ion-icon>
       <span>{{ 'MAP.ARCHIVE_BUTTON' | translate }}</span>
     </div>
-    <div class="record-button canvas-color" (click)="fs.gotoPage('settings')">
+    <div class="record-button" (click)="fs.gotoPage('settings')">
       <ion-icon name="settings-sharp"></ion-icon>
       <span>{{ 'MAP.SETTINGS_BUTTON' | translate }}</span>
     </div>
