--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -124,17 +124,18 @@
 </ion-content>
 
 <div class="bottom-safe-gray"></div>
+
 <ion-fab slot="fixed" horizontal="center" vertical="bottom" class="bottom-safe">
   <ion-row class="button-container">
-    <div class="record-button settings-color" (click)="fs.gotoPage('tab1')">
+    <div class="record-button" (click)="fs.gotoPage('tab1')">
       <ion-icon name="earth-sharp"></ion-icon>
       <span>{{ 'MAP.MAP_BUTTON' | translate }}</span>
     </div>
-    <div class="record-button settings-color" (click)="fs.gotoPage('canvas')">
+    <div class="record-button" (click)="fs.gotoPage('canvas')">
       <ion-icon name="analytics-sharp"></ion-icon>
       <span>{{ 'MAP.DATA_BUTTON' | translate }}</span>
     </div>
-    <div class="record-button settings-color" (click)="fs.gotoPage('archive')">
+    <div class="record-button" (click)="fs.gotoPage('archive')">
       <ion-icon name="list-sharp"></ion-icon>
       <span>{{ 'MAP.ARCHIVE_BUTTON' | translate }}</span>
     </div>
