--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,17 @@
 <!-- FAB button -->
 <ion-fab slot="fixed" horizontal="center" vertical="top" class="top-safe">
   <ion-row>
-    <div class="record-button map-color" (click)="present.isRecordPopoverOpen = true;">
+    <div class="record-button" (click)="present.isRecordPopoverOpen = true;">
       <ion-icon name="recording-sharp"></ion-icon>
       <span>{{ 'RECORD.BUTTON' | translate }}</span>
     </div>
-    <div class="record-button map-color" (click)="reference.isSearchGuidePopoverOpen = true;">
+    <div class="record-button" (click)="reference.isSearchGuidePopoverOpen = true;">
       <ion-icon name="help-sharp"></ion-icon>
       <span>{{ 'SEARCH.BUTTON' | translate }}</span>
     </div>
-    <div class="record-button map-color" (click)="mapService.cycleZoom()">
+    <div class="record-button" (click)="mapService.cycleZoom()">
       <ion-icon name="search-sharp"></ion-icon>
-      <span>Zoom</span>
+      <span>{{ 'MAP.ZOOM_BUTTON' | translate }}</span>
     </div>
   </ion-row>
 </ion-fab>
@@ -28,21 +28,20 @@
   <div class="safe-area"></div>
 </ion-content>
 
-<!-- space for android controls -->
-<div class="bottom-safe-gray"></div>
 
-<!-- Navigation buttons (unchanged) -->
+
+<!-- Navigation buttons -->
 <ion-fab slot="fixed" horizontal="center" vertical="bottom" class="bottom-safe">
   <ion-row>
-    <div class="record-button map-color" (click)="fs.gotoPage('canvas')">
+    <div class="record-button" (click)="fs.gotoPage('canvas')">
       <ion-icon name="analytics-sharp"></ion-icon>
       <span>{{ 'MAP.DATA_BUTTON' | translate }}</span>
     </div>
-    <div class="record-button map-color" (click)="fs.gotoPage('archive')">
+    <div class="record-button" (click)="fs.gotoPage('archive')">
       <ion-icon name="list-sharp"></ion-icon>
       <span>{{ 'MAP.ARCHIVE_BUTTON' | translate }}</span>
     </div>
-    <div class="record-button map-color" (click)="fs.gotoPage('settings')">
+    <div class="record-button" (click)="fs.gotoPage('settings')">
       <ion-icon name="settings-sharp"></ion-icon>
       <span>{{ 'MAP.SETTINGS_BUTTON' | translate }}</span>
     </div>
