--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,3 +1,15 @@
+/* --- ESTADOS ESPECIALES (Grabando o Errores) --- */
+.reddish-color {
+  background-color: #ffaaaa !important;
+  border-radius: 15px;
+  color: black !important;
+  ion-icon { color: black !important; }
+}
+
+ion-content {
+  --background: transparent !important;
+}
+
 #map-wrapper {
   position: absolute;
   top: 0;
@@ -5,39 +17,15 @@
   right: 0;
   bottom: 0;
   overflow: hidden;
-
-  /* Set the transform origin to top left */
+  z-index: 0;
   transform-origin: center;
-
-  /* Apply a default scale (1 = 100%) */
   transform: scale(1);
 }
 
 #map {
   width: 100%;
   height: 100%;
-  //padding-bottom: env(safe-area-inset-bottom);
   box-sizing: border-box;
 }
 
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-
-  .fade-in {
-    animation: fadeIn 0.5s ease-in-out;
-  }
-
-.reddish-color {
-  background-color: #ffaaaa !important;
-  color: black;
-  ion-icon {
-    color: black
-  }
-}
 
